--- a/scss/main.scss
+++ b/scss/main.scss
@@ -2,18 +2,18 @@
 @import './utilities/variables';
 @import './utilities/breakpoints';
 @import './utilities/mixins';
-@import './vendors/cdn';
+@import './bootstrap/cdn';
 @import './base/fonts';
 @import './base/reset';
-// @import './components/animations';
-@import './components/buttons';
-@import './components/carousel';
+@import './layout/main';
+@import './bootstrap/carousel';
 @import './components/containers';
-@import './components/navbar';
 @import './components/multimedia';
-@import './components/offcanvascart';
+@import './bootstrap/offcanvascart';
 @import './layout/body';
 @import './layout/footer';
-@import './layout/forms';
+@import './bootstrap/forms';
+@import './bootstrap/buttons';
 @import './layout/header';
-@import './layout/main';
+@import './bootstrap/cards';
+@import './bootstrap/navbar';
