--- a/css/stylescss.css
+++ b/css/stylescss.css
@@ -3,15 +3,18 @@
 @font-face {
   font-family: "Cubano";
   src: url("../fonts/Cubano.ttf");
-  font-weight: 400; }
+  font-weight: 400;
+  font-display: fallback; }
 
 @font-face {
   font-family: "Sofia Pro";
-  src: url("../fonts/sofiapro-light.otf"); }
+  src: url("../fonts/sofiapro-light.otf");
+  font-display: fallback; }
 
 @font-face {
   font-family: "Roboto Mono";
-  src: url("../fonts/RobotoMono-Light.ttf"); }
+  src: url("../fonts/RobotoMono-Light.ttf");
+  font-display: fallback; }
 
 * {
   margin: 0;
@@ -338,8 +341,11 @@
     grid-area: totalPrice; }
 
 .body {
-  background-image: linear-gradient(to top, #12181B, #2A2E35);
-  color: #F5F5F5; }
+  background: radial-gradient(black 15%, transparent 16%) 0 0, radial-gradient(black 15%, transparent 16%) 0.5rem 0.5rem, radial-gradient(rgba(255, 255, 255, 0.1) 15%, transparent 20%) 0 0.06rem, radial-gradient(rgba(255, 255, 255, 0.1) 15%, transparent 20%) 0.5rem 0.56rem;
+  background-color: #2A2E35;
+  background-size: 1rem 1rem;
+  background-attachment: fixed;
+  background-position: center; }
   .body h1,
   .body h2,
   .body h3,
@@ -351,7 +357,8 @@
   .body p {
     font-family: "Sofia Pro", sans-serif;
     margin: 0; }
-  .body input:focus, .body textarea:focus {
+  .body input:focus,
+  .body textarea:focus {
     background-color: #2A2E35;
     color: #F5F5F5; }
 
