--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -3,10 +3,10 @@
 
     &__title-site,
     &__link {
-        color: $color-font-primary;
+        color: $color-pink;
         text-decoration: none;
         &:hover {
-            color: $color-font-primary;
+            color: $color-pink;
         }
     }
 
