--- a/scss/components/_containers.scss
+++ b/scss/components/_containers.scss
@@ -55,6 +55,7 @@
         gap: 1.25rem;
         padding: 1.25rem;
     }
+
     @include block-container(&__products, 1rem);
 }
 
@@ -67,6 +68,7 @@
         gap: 1.25rem;
         padding: 1.25rem;
     }
+
     @include block-container(&__products, 1rem);
 }
 
@@ -90,7 +92,7 @@
 
 // CONTENEDOR DE FORMULARIOS
 .form {
-    
+
     &__form-group {
         display: flex;
         flex-direction: column;
@@ -105,12 +107,23 @@
             justify-self: center;
             align-self: center;
         }
+
+        &--fade-in-up {
+            opacity: 0;
+            animation-name: fade-in-up;
+        }
+
+        &--animated {
+            animation-duration: 1s;
+            animation-fill-mode: both;
+        }
     }
+
     @include block-container(&__form-group);
 }
 
 // CONTENEDOR DE MULTIMEDIA - VIDEO PRESENTACION
-.video{
+.video {
     @include block-container(&__content);
 }
 
