--- a/scss/main.scss
+++ b/scss/main.scss
@@ -2,6 +2,7 @@
 @import './utilities/variables';
 @import './utilities/breakpoints';
 @import './utilities/mixins';
+@import './utilities/animations';
 @import './bootstrap/cdn';
 @import './base/fonts';
 @import './base/reset';
