3er entrega proyecto

--- a/scss/utilities/_animations.scss
+++ b/scss/utilities/_animations.scss
@@ -2,7 +2,7 @@
 
 @keyframes fade-in-up {
     from {
-        transform: translate3d(0, 40px, 0)
+        transform: translate3d(0, 2.5rem, 0)
     }
 
     to {
