--- a/css/stylescss.css
+++ b/css/stylescss.css
@@ -2,7 +2,7 @@
 @import url("https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css");
 @keyframes fade-in-up {
   from {
-    transform: translate3d(0, 40px, 0); }
+    transform: translate3d(0, 2.5rem, 0); }
   to {
     transform: translate3d(0, 0, 0);
     opacity: 1; } }
